--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css>
 </head>
+
 <body>
     <section class="header">
     <nav>
         <a href="index.html"> <img src="images/logo.png" > </a>
-        <div class="nav-links">
+        <div class="nav-links" id="navLinks">
+            <i class="fa fa-times" onclick="hideMenu()" ></i>
+
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
@@ -20,12 +25,35 @@
                 <li><a href="">CONTACT</a></li>
             </ul>
         </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+
     </nav>
+
+    <div class="textbox">
+        <h1>Sri lanks's Biggest University</h1>
+        <p>Making website is now one of the easiest thing in the world. you just
+            need to learn HTML,CSS, <br>Javascript and you are good to go.
+        </p>
+        <a href="" class="hero-btn">Visit Us To know More </a>
+    </div>
  
     </section>
 
 
+<!--------Javascript for toggle menu----- -->
 
+<script>
+
+var navLinks =document.getElementById("navLinks");
+
+function showMenu(){
+    navLinks.style.right = "0";
+}
+function hideMenu(){
+    navLinks.style.right= "-200px";
+}
+
+</script>
 
 
 </body>
