--- a/index.html
+++ b/index.html
@@ -129,14 +129,115 @@
             <h3>WASHINGTON</h3>
         </div>
     </div>
-
-
-
    </div> 
-
-
 </section>
 
+<!-- facilities-->
+
+<section class="facilities">
+   <h1>Our Facilities</h1>
+   <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+    sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+    as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+    asdsd dasdaddasdasda asdad .
+</p>
+  <div class="row">
+
+    <div class="facilities-col">
+        <img src="images/library.png" alt="">
+        <h3>World class Library</h3>
+        <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+            sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+            as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+            asdsd dasdaddasdasda asdad .</p>
+    </div>
+    
+    <div class="facilities-col">
+        <img src="images/basketball.png" alt="">
+        <h3>Largest Play Ground</h3>
+        <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+            sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+            as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+            asdsd dasdaddasdasda asdad .</p>
+    </div>
+
+    <div class="facilities-col">
+        <img src="images/cafeteria.png" alt="">
+        <h3>Tasty and helthy food</h3>
+        <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+            sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+            as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+            asdsd dasdaddasdasda asdad .</p>
+    </div>
+  </div>
+</section>
+
+<!-- testimonials-->
+
+<section class="testimonials">
+  <h1>What our student says</h1>
+  <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+    sdfdfsdfs</p>
+
+
+    <div class="row">
+
+        <div class="testimonial-col">
+            <img src="images/user1.jpg" alt="">
+           <div>
+            <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+                sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+                as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+                asdsd dasdaddasdasda asdad .</p>
+                <h3> Christine Berkly</h3>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+           </div>
+        </div>
+     
+        <div class="testimonial-col">
+            <img src="images/user2.jpg" alt="">
+           <div>
+            <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs sfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+                sdfdfsdfs sdfs dsfsf sfs fkjk    jj jhj hgg h  hjuhu hiu ghi  hb k jjh kjh kj hj h h jshdfs
+                as   johjo sdfsfsdfsf ij   hjohiohoh  huhuhu  iji s fsfsffs okpj oj p jspojj  jsdelivras
+                asdsd dasdaddasdasda asdad .</p>
+                <h3>Charles Olivera</h3>
+                <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+           </div>
+        </div>
+    </div>
+</section>
+
+<!-- Call to Action-->
+
+<section class="cta">
+    <h1>enroll for our variuos online courses <br> Anywhere from the World</h1>
+    <a href="" class="hero-btn">CONTACT US</a>
+  
+</section>
+
+<!-- Footer-->
+
+<section class="footer">
+    <h1>About Us</h1>
+    <p>sdfffdfsfdfsdfs sfddfs sfsdfsdfs asdsd a sdasda da sdasdasdas dwqeqweqee qweq we <br>asdas da sddsfdsd fsf sfsdfsdfs sfsdfsdfs sdfsdfsdfsdf sfsfsdfsdfs 
+        sdfdfsdfs</p>
+        <div class="icons">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-linkedin"></i>
+    </div>
+    <p>made with</p>
+</section>
 
 </body>
 </html>
